[fix] big pack of fixes
