# src/main/kotlin/com/arekalov/papersplease/dto/shift/ShiftFilterRequest.kt
@@ -1,0 +1,7 @@
+package com.arekalov.papersplease.dto.shift
+
+data class ShiftFilterRequest(
+    val createdBy: String? = null,
+    val upkId: String? = null,
+    val endTimeNotNull: Boolean? = null,
+)
